# seqwater-demo

./: .env.example  .gitignore  README.md  app.template.yaml  app.yaml  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py  models.py
backend/agents/: __init__.py  aquaiq.py  retrieval.py  tools.py
backend/api/: routes.py
backend/data/: __init__.py  loader.py
backend/services/: agent_bricks.py  briefing.py  llm.py  repository.py  scenario.py
data/documents/: synthetic_asset_criticality_framework.md  synthetic_board_paper_q2_2026_water_security.md  synthetic_capital_business_case_pump_replacement.md  synthetic_capital_prioritisation_framework.md  synthetic_climate_outlook_seq_winter_2026.md  synthetic_dam_operations_playbook.md  synthetic_dam_safety_inspection_north_pine_2026.md  synthetic_flood_readiness_executive_briefing_template.md  synthetic_incident_report_pmp014_caboolture_2026q2.md  synthetic_monthly_water_quality_report_2026_05.md  synthetic_regulator_correspondence_dnrme_2026_04.md  (+2 more)
databricks/: app_create.json  app_create.template.json
docs/: demo-script.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: create_uc_assets.py  databricks_sql.py  deploy_app.py  deploy_full.py  generate_synthetic_data.py  generate_synthetic_pdfs.py  grant_app_permissions.py  run_quality_checks.py  seed_data.py  setup_agent_bricks.py  verify_app_permissions.py
tests/: conftest.py  test_agent_bricks.py  test_api.py  test_chat_streaming.py
(+85 files in other folders)
