[project]
name = "seqwater-ai-command-centre"
version = "0.1.0"
description = "Seqwater AI Command Centre — Databricks executive demo (data only)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Databricks Field Engineering" }
]
license = { text = "Proprietary — Databricks demo asset" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.30.0",
    "databricks-sql-connector>=3.3.0",
    "databricks-vectorsearch>=0.40",
    "mlflow>=2.16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]
pdf = [
    "reportlab>=4.0.0",
    "markdown>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
